test/expected/exit_bogus.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "exit" "hello world" "hello world"]
[Word
  Unquoted "exit"
]
[Word
  DoubleQuoted "hello world"
]
[Word
  DoubleQuoted "hello world"
]
shit: 2:6: warning: The code 'hello world' is not a number from 0 to 255, exit either rejects it or wraps it modulo 256.
     2 |  exit "hello world" "hello world"
       |       ^~~~~~~~~~~~~ here.
shit: 2:1: error: Builtin 'exit': 'hello world' is not a numeric exit status.
     2 |  exit "hello world" "hello world"
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
[Code 2]
